--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -10,6 +10,7 @@
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="icon" href="img/olympikus-logo.png" type="image/img" sizes="16x16">
 
     <!-- Importa o CSS utilizado neste projeto -->
     <link href="css/style.css" rel="stylesheet">
@@ -49,90 +50,90 @@
         <div class="row text-center text-lg-left">
 
             <div class="col-lg-3 col-md-4 col-xs-6">
-                <a id="myBtn" href="#" class="d-block mb-4 h-100">
-                    <img class="img-fluid img-thumbnail" src="http://placehold.it/400x300" alt="">
-                    <figcaption>REF:</figcaption>
+                <a id="myBtn" class="d-block mb-4 h-100">
+                    <img class="img-fluid img-thumbnail" src="img/FOTOS HORIZONTAIS.jpg" alt="">
+                    <figcaption>REF:id_PRODUTO</figcaption>
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-xs-6">
                 <a href="#" class="d-block mb-4 h-100">
-                    <img class="img-fluid img-thumbnail" src="http://placehold.it/400x300" alt="">
-                    <figcaption>REF:</figcaption>
-                </a>
-            </div>
-
-            <div class="col-lg-3 col-md-4 col-xs-6">
-                <a href="#" class="d-block mb-4 h-100">
-                    <img class="img-fluid img-thumbnail" src="http://placehold.it/400x300" alt="">
-                    <figcaption>REF:</figcaption>
+                    <img class="img-fluid img-thumbnail" src="img/FOTOS HORIZONTAIS2.jpg" alt="">
+                    <figcaption>REF:id_PRODUTO</figcaption>
                 </a>
             </div>
 
             <div class="col-lg-3 col-md-4 col-xs-6">
                 <a href="#" class="d-block mb-4 h-100">
-                    <img class="img-fluid img-thumbnail" src="http://placehold.it/400x300" alt="">
-                    <figcaption>REF:</figcaption>
+                    <img class="img-fluid img-thumbnail" src="img/FOTOS HORIZONTAIS3.jpg" alt="">
+                    <figcaption>REF:id_PRODUTO</figcaption>
                 </a>
             </div>
 
             <div class="col-lg-3 col-md-4 col-xs-6">
                 <a href="#" class="d-block mb-4 h-100">
-                    <img class="img-fluid img-thumbnail" src="http://placehold.it/400x300" alt="">
-                    <figcaption>REF:</figcaption>
+                    <img class="img-fluid img-thumbnail" src="img/FOTOS HORIZONTAIS4.jpg" alt="">
+                    <figcaption>REF:id_PRODUTO</figcaption>
                 </a>
             </div>
 
             <div class="col-lg-3 col-md-4 col-xs-6">
                 <a href="#" class="d-block mb-4 h-100">
-                    <img class="img-fluid img-thumbnail" src="http://placehold.it/400x300" alt="">
-                    <figcaption>REF:</figcaption>
+                    <img class="img-fluid img-thumbnail" src="img/FOTOS HORIZONTAIS5.jpg" alt="">
+                    <figcaption>REF:id_PRODUTO</figcaption>
                 </a>
             </div>
 
             <div class="col-lg-3 col-md-4 col-xs-6">
                 <a href="#" class="d-block mb-4 h-100">
-                    <img class="img-fluid img-thumbnail" src="http://placehold.it/400x300" alt="">
-                    <figcaption>REF:</figcaption>
+                    <img class="img-fluid img-thumbnail" src="img/FOTOS HORIZONTAIS6.jpg" alt="">
+                    <figcaption>REF:id_PRODUTO</figcaption>
                 </a>
             </div>
 
             <div class="col-lg-3 col-md-4 col-xs-6">
                 <a href="#" class="d-block mb-4 h-100">
-                    <img class="img-fluid img-thumbnail" src="http://placehold.it/400x300" alt="">
-                    <figcaption>REF:</figcaption>
+                    <img class="img-fluid img-thumbnail" src="img/FOTOS HORIZONTAIS7.jpg" alt="">
+                    <figcaption>REF:id_PRODUTO</figcaption>
                 </a>
             </div>
 
             <div class="col-lg-3 col-md-4 col-xs-6">
                 <a href="#" class="d-block mb-4 h-100">
-                    <img class="img-fluid img-thumbnail" src="http://placehold.it/400x300" alt="">
-                    <figcaption>REF:</figcaption>
+                    <img class="img-fluid img-thumbnail" src="img/FOTOS HORIZONTAIS8.jpg" alt="">
+                    <figcaption>REF:id_PRODUTO</figcaption>
+                </a>
+            </div>
+
+            <div class="col-lg-3 col-md-4 col-xs-6">
+                <a href="#" class="d-block mb-4 h-100">
+                    <img class="img-fluid img-thumbnail" src="img/FOTOS HORIZONTAIS9.jpg" alt="">
+                    <figcaption>REF:id_PRODUTO</figcaption>
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-xs-6">
                 <a href="#" class="d-block mb-4 h-100">
-                    <img class="img-fluid img-thumbnail" src="http://placehold.it/400x300" alt="">
-                    <figcaption>REF:</figcaption>
+                    <img class="img-fluid img-thumbnail" src="img/FOTOS HORIZONTAIS10.jpg" alt="">
+                    <figcaption>REF:id_PRODUTO</figcaption>
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-xs-6">
                 <a href="#" class="d-block mb-4 h-100">
-                    <img class="img-fluid img-thumbnail" src="http://placehold.it/400x300" alt="">
-                    <figcaption>REF:</figcaption>
+                    <img class="img-fluid img-thumbnail" src="img/FOTOS HORIZONTAIS11.jpg" alt="">
+                    <figcaption>REF:id_PRODUTO</figcaption>
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-xs-6">
                 <a href="#" class="d-block mb-4 h-100">
-                    <img class="img-fluid img-thumbnail" src="http://placehold.it/400x300" alt="">
-                    <figcaption>REF:</figcaption>
+                    <img class="img-fluid img-thumbnail" src="img/FOTOS HORIZONTAIS12.jpg" alt="">
+                    <figcaption>REF:id_PRODUTO</figcaption>
                 </a>
             </div>
         </div>
 
     </div>
 
-    <!-- Modal -->
-    <button id="myBtn">Open Modal</button>
+
+
 
     <!-- The Modal -->
     <div id="myModal" class="modal">
@@ -141,22 +142,17 @@
         <div class="modal-content">
             <div class="modal-header">
                 <span class="close">&times;</span>
-                <h2>Modal Header</h2>
+                <h2></h2>
             </div>
             <div class="modal-body">
-                <p>Some other text...</p>
-                <p>ESTE é UM TESTE</p>
-                <p>ESTE é UM TESTE</p>
-                <p>ESTE é UM TESTE</p>
-                <p>ESTE é UM TESTE</p>
-                <p>ESTE é UM TESTE</p>
-                <p>ESTE é UM TESTE</p>
+                <img id="IMG_PRODUTO" class="img-fluid img-thumbnail" src="img/FOTOS HORIZONTAIS.jpg" alt="">
+                <figcaption class="id_PRODUTO">REF: id_PRODUTO</figcaption>
+                <p CLASS="NOME_PRODUTO">NOME_PRODUTO</p>
+                <button href="modal.html" class=" button ">Editar e Postar</button>
 
-                <p>ESTE é UM TESTE</p>
-                <p>ESTE é UM TESTE10</p>
             </div>
-            <div class="modal-footer">
-                <h3>Modal Footer</h3>
+            <div class="modal-footer ">
+                <h2></h2>
             </div>
         </div>
 
@@ -164,21 +160,21 @@
     <!-- /Conteúdo da Pagina -->
 
     <!-- Rodapé -->
-    <footer class="py-5 bg-dark">
-        <div class="container">
-            <p class="m-0 text-center text-white">Copyright &copy; OseiasBeu 2018</p>
+    <footer class="py-5 bg-dark ">
+        <div class="container ">
+            <p class="m-0 text-center text-white ">Copyright &copy; OseiasBeu 2018</p>
         </div>
     </footer>
     <!-- /Rodapé -->
 
     <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/popper/popper.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+    <script src="vendor/jquery/jquery.min.js "></script>
+    <script src="vendor/popper/popper.min.js "></script>
+    <script src="vendor/bootstrap/js/bootstrap.min.js "></script>
 
     <!-- Importa o Javascript utilizado neste projeto -->
-    <script src="js/modal.js"></script>
-    <script src="js/script.js"></script>
+    <script src="js/modal.js "></script>
+    <script src="js/script.js "></script>
 
 </body>
 
