--- a/Frontend/modal.html
+++ b/Frontend/modal.html
@@ -12,7 +12,8 @@
     <h2>Animated Modal with Header and Footer</h2>
 
     <!-- Trigger/Open The Modal -->
-    <button id="myBtn">Open Modal</button>
+    <button onclick="bnt()">Open Modal</button>
+
 
     <!-- The Modal -->
     <div id="myModal" class="modal">
@@ -20,7 +21,7 @@
         <!-- Modal content -->
         <div class="modal-content">
             <div class="modal-header">
-                <span class="close">&times;</span>
+                <span onclick="close()">&times;</span>
                 <h2>Modal Header</h2>
             </div>
             <div class="modal-body">
@@ -31,7 +32,6 @@
                 <p>ESTE é UM TESTE</p>
                 <p>ESTE é UM TESTE</p>
                 <p>ESTE é UM TESTE</p>
-
                 <p>ESTE é UM TESTE</p>
                 <p>ESTE é UM TESTE10</p>
             </div>
