--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -116,14 +116,14 @@
 
         <input id="barraPesquisa" type="text" placeholder="Busque produtos..." name="search">
         <form action=""></form>
-
+        <!-- ###################################################LOGIN########################################################################## -->
         <button class="log" onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Entre</button>
 
-        <div id="id01" class="modal">
+        <div id="id01" class="modalL">
 
-            <form class="modal-content animate" action="/action_page.php">
+            <form class="modalL-content animate" action="/action_page.php">
                 <div class="imgcontainer">
-                    <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
+                    <span onclick="document.getElementById('id01').style.display='none'" class="closel" title="Close Modal">&times;</span>
                     <img src="img/avatar.png" alt="Avatar" class="avatar">
                 </div>
 
@@ -146,7 +146,7 @@
                 </div>
             </form>
         </div>
-
+        <!-- ###################################################LOGIN########################################################################## -->
 
     </nav>
 
