--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
                 </div>
             </form>
         </div>
+        <!-- ###################################################[FIM]########################################################################## -->
         <!-- ###################################################LOGIN########################################################################## -->
 
     </nav>
@@ -158,83 +159,83 @@
         <div class="row text-center text-lg-left">
 
             <div class="col-lg-3 col-md-4 col-xs-6">
-                <a id="myBtn" class="d-block mb-4 h-100">
-                    <img class="img-fluid img-thumbnail" src="img/FOTOS HORIZONTAIS.jpg" alt="">
-                    <figcaption>REF:id_PRODUTO</figcaption>
-                </a>
+                <!-- <a id="myBtn" class="d-block mb-4 h-100"> -->
+                <img onclick="clique(this)" class="img-fluid img-thumbnail" src="img/FOTOS HORIZONTAIS.jpg" alt="">
+                <figcaption>REF:id_PRODUTO</figcaption>
+                <!-- </a> -->
             </div>
             <div class="col-lg-3 col-md-4 col-xs-6">
-                <a href="#" class="d-block mb-4 h-100">
-                    <img class="img-fluid img-thumbnail" src="img/FOTOS HORIZONTAIS2.jpg" alt="">
-                    <figcaption>REF:id_PRODUTO</figcaption>
-                </a>
-            </div>
-
-            <div class="col-lg-3 col-md-4 col-xs-6">
-                <a href="#" class="d-block mb-4 h-100">
-                    <img class="img-fluid img-thumbnail" src="img/FOTOS HORIZONTAIS3.jpg" alt="">
-                    <figcaption>REF:id_PRODUTO</figcaption>
-                </a>
+                <!-- <a href="#" class="d-block mb-4 h-100"> -->
+                <img onclick="clique(this)" class="img-fluid img-thumbnail" src="img/FOTOS HORIZONTAIS2.jpg" alt="">
+                <figcaption>REF:id_PRODUTO</figcaption>
+                <!-- </a> -->
             </div>
 
             <div class="col-lg-3 col-md-4 col-xs-6">
-                <a href="#" class="d-block mb-4 h-100">
-                    <img class="img-fluid img-thumbnail" src="img/FOTOS HORIZONTAIS4.jpg" alt="">
-                    <figcaption>REF:id_PRODUTO</figcaption>
-                </a>
+                <!-- <a href="#" class="d-block mb-4 h-100"> -->
+                <img onclick="clique(this)" class="img-fluid img-thumbnail" src="img/FOTOS HORIZONTAIS3.jpg" alt="">
+                <figcaption>REF:id_PRODUTO</figcaption>
+                <!-- </a> -->
             </div>
 
             <div class="col-lg-3 col-md-4 col-xs-6">
-                <a href="#" class="d-block mb-4 h-100">
-                    <img class="img-fluid img-thumbnail" src="img/FOTOS HORIZONTAIS5.jpg" alt="">
-                    <figcaption>REF:id_PRODUTO</figcaption>
-                </a>
+                <!-- <a href="#" class="d-block mb-4 h-100"> -->
+                <img onclick="clique(this)" class="img-fluid img-thumbnail" src="img/FOTOS HORIZONTAIS4.jpg" alt="">
+                <figcaption>REF:id_PRODUTO</figcaption>
+                <!-- </a> -->
             </div>
 
             <div class="col-lg-3 col-md-4 col-xs-6">
-                <a href="#" class="d-block mb-4 h-100">
-                    <img class="img-fluid img-thumbnail" src="img/FOTOS HORIZONTAIS6.jpg" alt="">
-                    <figcaption>REF:id_PRODUTO</figcaption>
-                </a>
+                <!-- <a href="#" class="d-block mb-4 h-100"> -->
+                <img onclick="clique(this)" class="img-fluid img-thumbnail" src="img/FOTOS HORIZONTAIS5.jpg" alt="">
+                <figcaption>REF:id_PRODUTO</figcaption>
+                <!-- </a> -->
             </div>
 
             <div class="col-lg-3 col-md-4 col-xs-6">
-                <a href="#" class="d-block mb-4 h-100">
-                    <img class="img-fluid img-thumbnail" src="img/FOTOS HORIZONTAIS7.jpg" alt="">
-                    <figcaption>REF:id_PRODUTO</figcaption>
-                </a>
+                <!-- <a href="#" class="d-block mb-4 h-100"> -->
+                <img onclick="clique(this)" class="img-fluid img-thumbnail" src="img/FOTOS HORIZONTAIS6.jpg" alt="">
+                <figcaption>REF:id_PRODUTO</figcaption>
+                <!-- </a> -->
             </div>
 
             <div class="col-lg-3 col-md-4 col-xs-6">
-                <a href="#" class="d-block mb-4 h-100">
-                    <img class="img-fluid img-thumbnail" src="img/FOTOS HORIZONTAIS8.jpg" alt="">
-                    <figcaption>REF:id_PRODUTO</figcaption>
-                </a>
+                <!-- <a href="#" class="d-block mb-4 h-100"> -->
+                <img onclick="clique(this)" class="img-fluid img-thumbnail" src="img/FOTOS HORIZONTAIS7.jpg" alt="">
+                <figcaption>REF:id_PRODUTO</figcaption>
+                <!-- </a> -->
             </div>
 
             <div class="col-lg-3 col-md-4 col-xs-6">
-                <a href="#" class="d-block mb-4 h-100">
-                    <img class="img-fluid img-thumbnail" src="img/FOTOS HORIZONTAIS9.jpg" alt="">
-                    <figcaption>REF:id_PRODUTO</figcaption>
-                </a>
+                <!-- <a href="#" class="d-block mb-4 h-100"> -->
+                <img onclick="clique(this)" class="img-fluid img-thumbnail" src="img/FOTOS HORIZONTAIS8.jpg" alt="">
+                <figcaption>REF:id_PRODUTO</figcaption>
+                <!-- </a> -->
+            </div>
+
+            <div class="col-lg-3 col-md-4 col-xs-6">
+                <!-- <a href="#" class="d-block mb-4 h-100"> -->
+                <img onclick="clique(this)" class="img-fluid img-thumbnail" src="img/FOTOS HORIZONTAIS9.jpg" alt="">
+                <figcaption>REF:id_PRODUTO</figcaption>
+                <!-- </a> -->
             </div>
             <div class="col-lg-3 col-md-4 col-xs-6">
-                <a href="#" class="d-block mb-4 h-100">
-                    <img class="img-fluid img-thumbnail" src="img/FOTOS HORIZONTAIS10.jpg" alt="">
-                    <figcaption>REF:id_PRODUTO</figcaption>
-                </a>
+                <!-- <a href="#" class="d-block mb-4 h-100"> -->
+                <img onclick="clique(this)" class="img-fluid img-thumbnail" src="img/FOTOS HORIZONTAIS10.jpg" alt="">
+                <figcaption>REF:id_PRODUTO</figcaption>
+                <!-- </a> -->
             </div>
             <div class="col-lg-3 col-md-4 col-xs-6">
-                <a href="#" class="d-block mb-4 h-100">
-                    <img class="img-fluid img-thumbnail" src="img/FOTOS HORIZONTAIS11.jpg" alt="">
-                    <figcaption>REF:id_PRODUTO</figcaption>
-                </a>
+                <!-- <a href="#" class="d-block mb-4 h-100"> -->
+                <img onclick="clique(this)" class="img-fluid img-thumbnail" src="img/FOTOS HORIZONTAIS11.jpg" alt="">
+                <figcaption>REF:id_PRODUTO</figcaption>
+                <!-- </a> -->
             </div>
             <div class="col-lg-3 col-md-4 col-xs-6">
-                <a href="#" class="d-block mb-4 h-100">
-                    <img class="img-fluid img-thumbnail" src="img/FOTOS HORIZONTAIS12.jpg" alt="">
-                    <figcaption>REF:id_PRODUTO</figcaption>
-                </a>
+                <!-- <a href="#" class="d-block mb-4 h-100"> -->
+                <img onclick="clique(this)" class="img-fluid img-thumbnail" src="img/FOTOS HORIZONTAIS12.jpg" alt="">
+                <figcaption>REF:id_PRODUTO</figcaption>
+                <!-- </a> -->
             </div>
         </div>
 
@@ -242,18 +243,31 @@
 
 
 
+    <!-- MEUMODAAL -->
+    <div id="janelaModal" class="modalVisual">
+        <div class="modal-content">
+            <div class="headerModal">
+                <span class="fechar">x</span>
+            </div>
+
+            <img class="modalConteudo" id="imgModal">
+            <p> </p>
+            <div id="txtImg"></div>
+        </div>
+    </div>
+
 
     <!-- The Modal -->
-    <div id="myModal" class="modal">
+    <!-- <div id="myModal" class="modal"> -->
 
-        <!-- Modal content -->
-        <div class="modal-content">
+    <!-- Modal content -->
+    <!-- <div class="modal-content">
             <div class="modal-header">
                 <span class="close">&times;</span>
                 <h2></h2>
             </div>
             <div class="modal-body">
-                <img id="IMG_PRODUTO" class="img-fluid img-thumbnail" src="img/FOTOS HORIZONTAIS.jpg" alt="">
+                <img id="IMG_PRODUTO" onclick="clique(this)" class="img-fluid img-thumbnail" src="img/FOTOS HORIZONTAIS.jpg" alt="">
                 <figcaption class="id_PRODUTO">REF: id_PRODUTO</figcaption>
                 <p CLASS="NOME_PRODUTO">NOME_PRODUTO</p>
                 <button href="modal.html" class=" button ">Editar e Postar</button>
@@ -264,7 +278,7 @@
             </div>
         </div>
 
-    </div>
+    </div> -->
     <!-- /Conteúdo da Pagina -->
 
     <!-- Rodapé -->
