--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="icon" href="img/olympikus-logo.png" type="image/img" sizes="16x16">
-    <title>Olympicus</title>
+    <title>Olympikus</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -146,102 +146,85 @@
                 </div>
             </form>
         </div>
-        <!-- ###################################################[FIM]########################################################################## -->
-        <!-- ###################################################LOGIN########################################################################## -->
+        <!-- ###################################################[FIM]##################################################################### -->
+        <!-- ###################################################LOGIN#################################################################### -->
 
     </nav>
-
+    <!-- ###################################################[INICIO]########################################################################## -->
+    <!-- ###################################################[IMGAENS]########################################################################## -->
     <!-- Conteúdo da Pagina -->
+
     <div class="container">
 
-        <h1 class="my-5 text-center text-lg-left"></h1>
+        <h1 class="my-5 text-center text-lg-left">OLYMPIKUS</h1>
 
         <div class="row text-center text-lg-left">
 
             <div class="col-lg-3 col-md-4 col-xs-6">
-                <!-- <a id="myBtn" class="d-block mb-4 h-100"> -->
                 <img onclick="clique(this)" class="img-fluid img-thumbnail" src="img/FOTOS HORIZONTAIS.jpg" alt="">
                 <figcaption>REF:id_PRODUTO</figcaption>
-                <!-- </a> -->
             </div>
             <div class="col-lg-3 col-md-4 col-xs-6">
-                <!-- <a href="#" class="d-block mb-4 h-100"> -->
                 <img onclick="clique(this)" class="img-fluid img-thumbnail" src="img/FOTOS HORIZONTAIS2.jpg" alt="">
                 <figcaption>REF:id_PRODUTO</figcaption>
-                <!-- </a> -->
             </div>
 
             <div class="col-lg-3 col-md-4 col-xs-6">
-                <!-- <a href="#" class="d-block mb-4 h-100"> -->
                 <img onclick="clique(this)" class="img-fluid img-thumbnail" src="img/FOTOS HORIZONTAIS3.jpg" alt="">
                 <figcaption>REF:id_PRODUTO</figcaption>
-                <!-- </a> -->
             </div>
 
             <div class="col-lg-3 col-md-4 col-xs-6">
-                <!-- <a href="#" class="d-block mb-4 h-100"> -->
                 <img onclick="clique(this)" class="img-fluid img-thumbnail" src="img/FOTOS HORIZONTAIS4.jpg" alt="">
                 <figcaption>REF:id_PRODUTO</figcaption>
-                <!-- </a> -->
             </div>
 
             <div class="col-lg-3 col-md-4 col-xs-6">
-                <!-- <a href="#" class="d-block mb-4 h-100"> -->
                 <img onclick="clique(this)" class="img-fluid img-thumbnail" src="img/FOTOS HORIZONTAIS5.jpg" alt="">
                 <figcaption>REF:id_PRODUTO</figcaption>
-                <!-- </a> -->
             </div>
 
             <div class="col-lg-3 col-md-4 col-xs-6">
-                <!-- <a href="#" class="d-block mb-4 h-100"> -->
                 <img onclick="clique(this)" class="img-fluid img-thumbnail" src="img/FOTOS HORIZONTAIS6.jpg" alt="">
                 <figcaption>REF:id_PRODUTO</figcaption>
-                <!-- </a> -->
             </div>
 
             <div class="col-lg-3 col-md-4 col-xs-6">
-                <!-- <a href="#" class="d-block mb-4 h-100"> -->
                 <img onclick="clique(this)" class="img-fluid img-thumbnail" src="img/FOTOS HORIZONTAIS7.jpg" alt="">
                 <figcaption>REF:id_PRODUTO</figcaption>
-                <!-- </a> -->
             </div>
 
             <div class="col-lg-3 col-md-4 col-xs-6">
-                <!-- <a href="#" class="d-block mb-4 h-100"> -->
                 <img onclick="clique(this)" class="img-fluid img-thumbnail" src="img/FOTOS HORIZONTAIS8.jpg" alt="">
                 <figcaption>REF:id_PRODUTO</figcaption>
-                <!-- </a> -->
             </div>
 
             <div class="col-lg-3 col-md-4 col-xs-6">
-                <!-- <a href="#" class="d-block mb-4 h-100"> -->
                 <img onclick="clique(this)" class="img-fluid img-thumbnail" src="img/FOTOS HORIZONTAIS9.jpg" alt="">
                 <figcaption>REF:id_PRODUTO</figcaption>
-                <!-- </a> -->
             </div>
+
             <div class="col-lg-3 col-md-4 col-xs-6">
-                <!-- <a href="#" class="d-block mb-4 h-100"> -->
                 <img onclick="clique(this)" class="img-fluid img-thumbnail" src="img/FOTOS HORIZONTAIS10.jpg" alt="">
                 <figcaption>REF:id_PRODUTO</figcaption>
-                <!-- </a> -->
             </div>
+
             <div class="col-lg-3 col-md-4 col-xs-6">
-                <!-- <a href="#" class="d-block mb-4 h-100"> -->
                 <img onclick="clique(this)" class="img-fluid img-thumbnail" src="img/FOTOS HORIZONTAIS11.jpg" alt="">
                 <figcaption>REF:id_PRODUTO</figcaption>
-                <!-- </a> -->
             </div>
+
             <div class="col-lg-3 col-md-4 col-xs-6">
-                <!-- <a href="#" class="d-block mb-4 h-100"> -->
+
                 <img onclick="clique(this)" class="img-fluid img-thumbnail" src="img/FOTOS HORIZONTAIS12.jpg" alt="">
                 <figcaption>REF:id_PRODUTO</figcaption>
-                <!-- </a> -->
             </div>
         </div>
 
     </div>
 
-
+    <!-- ###################################################[IMAGENS]#################################################### -->
+    <!-- ###################################################[FIM]######################################################## -->
 
     <!-- MEUMODAAL -->
     <div id="janelaModal" class="modalVisual">
@@ -253,33 +236,9 @@
             <img class="modalConteudo" id="imgModal">
             <p> </p>
             <div id="txtImg"></div>
+            <button class="button">Editar e Postar</button>
         </div>
     </div>
-
-
-    <!-- The Modal -->
-    <!-- <div id="myModal" class="modal"> -->
-
-    <!-- Modal content -->
-    <!-- <div class="modal-content">
-            <div class="modal-header">
-                <span class="close">&times;</span>
-                <h2></h2>
-            </div>
-            <div class="modal-body">
-                <img id="IMG_PRODUTO" onclick="clique(this)" class="img-fluid img-thumbnail" src="img/FOTOS HORIZONTAIS.jpg" alt="">
-                <figcaption class="id_PRODUTO">REF: id_PRODUTO</figcaption>
-                <p CLASS="NOME_PRODUTO">NOME_PRODUTO</p>
-                <button href="modal.html" class=" button ">Editar e Postar</button>
-
-            </div>
-            <div class="modal-footer ">
-                <h2></h2>
-            </div>
-        </div>
-
-    </div> -->
-    <!-- /Conteúdo da Pagina -->
 
     <!-- Rodapé -->
     <footer class="py-5 bg-dark ">
