--- a/index.html
+++ b/index.html
@@ -117,35 +117,9 @@
         <input id="barraPesquisa" type="text" placeholder="Busque produtos..." name="search">
         <form action=""></form>
         <!-- ###################################################LOGIN########################################################################## -->
-        <button class="log" onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Entre</button>
+        <button class="log" onclick="document.getElementById('id01').style.display='block'">Entre</button>
 
-        <div id="id01" class="modalL">
 
-            <form class="modalL-content animate" action="/action_page.php">
-                <div class="imgcontainer">
-                    <span onclick="document.getElementById('id01').style.display='none'" class="closel" title="Close Modal">&times;</span>
-                    <img src="img/avatar.png" alt="Avatar" class="avatar">
-                </div>
-
-                <div class="container">
-                    <label for="uname"><b>Usuario:</b></label>
-                    <input type="text" placeholder="Nome" name="uname" required>
-
-                    <label for="psw"><b>Senha:</b></label>
-                    <input type="password" placeholder="Senha" name="psw" required>
-
-                    <button class="log" type="submit">Entrar</button>
-                    <label>
-            <input type="checkbox" checked="checked" name="remember"> Lembre-me
-          </label>
-                </div>
-
-                <div class="container" style="background-color:#f1f1f1">
-                    <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
-                    <span class="psw">Esqueceu a <a href="#">senha?</a></span>
-                </div>
-            </form>
-        </div>
         <!-- ###################################################[FIM]##################################################################### -->
         <!-- ###################################################LOGIN#################################################################### -->
 
@@ -153,6 +127,7 @@
     <!-- ###################################################[INICIO]########################################################################## -->
     <!-- ###################################################[IMGAENS]########################################################################## -->
     <!-- Conteúdo da Pagina -->
+
 
     <div class="container">
 
@@ -225,8 +200,38 @@
 
     <!-- ###################################################[IMAGENS]#################################################### -->
     <!-- ###################################################[FIM]######################################################## -->
+    <!-- MEU MODAL LOGIN -->
+    <div id="id01" class="modalL">
 
-    <!-- MEUMODAAL -->
+        <form class="modalL-content animate" action="/action_page.php">
+            <div class="imgcontainer">
+                <span onclick="document.getElementById('id01').style.display='none'" class="closel" title="Close Modal">&times;</span>
+                <img src="img/avatar.png" alt="Avatar" class="avatar">
+            </div>
+
+            <div class="container">
+                <label for="uname"><b>Usuario:</b></label>
+                <input type="text" placeholder="Nome" name="uname" required>
+
+                <label for="psw"><b>Senha:</b></label>
+                <input type="password" placeholder="Senha" name="psw" required>
+
+                <button class="entrar" type="submit">Entrar</button>
+                <label>
+            <input type="checkbox" checked="checked" name="remember"> Lembre-me
+          </label>
+            </div>
+
+            <div class="container" style="background-color:#f1f1f1">
+                <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
+                <span class="psw">Esqueceu a <a href="#">senha?</a></span>
+            </div>
+        </form>
+    </div>
+
+
+
+    <!-- MEUMODAAL IMAGEM -->
     <div id="janelaModal" class="modalVisual">
         <div class="modal-content">
             <div class="headerModal">
